# fastmath-kotlin

./: .gitignore  CMakeLists.txt  README.md
src/: Main.kt
